# JenJin

./: CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon
asteroids_test/scripts/: gun.lua
engine/include/jenjin/: datastore.h  engine.h  gameobject.h  helpers.h  log.h  luamanager.h  scene.h
engine/include/jenjin/editor/: editor.h
engine/include/jenjin/targets/: editor.h
engine/src/: datastore.cpp  engine.cpp  helpers.cpp  log.cpp  luamanager.cpp  scene.cpp
engine/src/editor/: editor.cpp  widgets.cpp
engine/src/targets/: editor.cpp
jenjin/src/: main.cpp
resources/shaders/: default_frag.glsl
src/: buffers.zig  camera.zig  main.zig  object.zig  shader.zig  texture.zig  utils.zig
src/shaders/: frag.glsl  vert.glsl
